[Nix] Adding missing platform #ifs to WebCore files https://bugs.webkit.org/show_bug.cgi?id=126227

Reviewed by Csaba Osztrogonác.

No new tests needed.

* loader/EmptyClients.h:
* page/ChromeClient.h:
* page/DragController.cpp:
(WebCore::DragController::startDrag):
* platform/LocalizedStrings.h:


Canonical link: https://commits.webkit.org/144406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161342 268f45cc-cd09-0410-ab3c-d52691b4dbfc